--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,5 +1,5 @@
 <h1>Home</h1>
 
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+{{!-- <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script src="/api/public/js/chat.js"></script>
+<script src="/api/public/index.js"></script> --}}
