--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -1,3 +1,53 @@
+/* Reset */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/* Body */
 body {
     background-color: lightblue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column wrap;
+    height: 100vh;
+}
+
+/* Formulario */
+body .ingresoProductos {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    margin-top: 15px;
+    gap: 10px;
+}
+
+body .ingresoProductos div {
+    width: 100%;
+}
+
+body .ingresoProductos div input {
+    width: 100%;
+    height: 30px;
+    border-radius: 10px;
+    padding: 0 10px;
+}
+
+body .ingresoProductos .button {
+    width: 90px;
+    height: 30px;
+    border-radius: 10px;
+}
+
+/* Product */
+body .product {
+    width: 300px;
+    margin-top: 20px;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: flex-start;
 }
