--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -2,12 +2,12 @@
 
 {{#each products}}
     <div class="product">
+        <img src={{this.thumbnail}} alt="">
         <p>Id: {{this.id}}</p>
         <p>Category: {{this.category}}</p>
         <p>Title: {{this.title}}</p>
         <p>Description:: {{this.description}}</p>
         <p>Price: {{this.price}}</p>
-        <p>Thumbnail: {{this.thumbnail}}</p>
         <p>Code: {{this.code}}</p>
         <p>Available: {{this.available}}</p>
     </div>
