--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -7,12 +7,21 @@
 
 /* Body */
 body {
-    background-color: lightblue;
+    background-color: grey;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     flex-flow: column wrap;
     height: 100vh;
+    margin-top: 30px;
+}
+
+body h1 {
+    text-decoration: underline;
+}
+
+body h2 {
+    margin-top: 15px;
 }
 
 /* Formulario */
@@ -21,8 +30,21 @@ body .ingresoProductos {
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
-    margin-top: 15px;
+    margin-top: 30px;
+}
+
+body .ingresoProductos .foto {
+    margin-bottom: 15px;
+}
+
+body .ingresoProductos .ingresoProductos__container {
+    width: 100vw;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center;
     gap: 10px;
+    padding: 0px 30px 0px 30px;
 }
 
 body .ingresoProductos div {
@@ -36,24 +58,172 @@ body .ingresoProductos div input {
     padding: 0 10px;
 }
 
+body .ingresoProductos .container__button {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
 body .ingresoProductos .button {
+    width: 90px;
+    height: 30px;
+    border-radius: 10px;
+    margin-top: 15px;
+}
+
+body .ingresoProductos div textarea {
+    width: 100%;
+    border-radius: 10px;
+    padding: 0 10px;
+    padding-top: 5px;
+}
+
+section {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    gap: 10px;
+    margin-bottom: 30px;
+}
+
+section a button {
     width: 90px;
     height: 30px;
     border-radius: 10px;
 }
 
-/* Product */
-body .product {
-    width: 300px;
-    margin-top: 20px;
+/* Table */
+
+.container {
     display: flex;
-    flex-flow: column nowrap;
     justify-content: center;
-    align-items: flex-start;
-    border: 2px solid black;
+    align-items: center;
+    flex-flow: column nowrap;
+    width: 100vw;
 }
 
-body .product img {
+.container .container__table {
     width: 100%;
-    aspect-ratio: 1/1;
+    margin-top: 30px;
+    padding: 0px 30px 30px 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column nowrap;
+}
+
+.container .container__table .table__categories {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column nowrap;
+}
+
+.container .container__table .table__categories .categories__list {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-flow: row nowrap;
+    margin-bottom: 10px;
+    padding: 15px;
+}
+
+.container .container__table .table__categories .categories__item {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-flow: row nowrap;
+    height: 60px;
+    border: 2px solid black;
+    margin-bottom: 10px;
+    padding: 15px;
+    border-radius: 10px;
+    background-color: white;
+}
+
+.container .container__table .table__categories .categories__list .id {
+    text-align: center;
+    width: 50px;
+}
+
+.container .container__table .table__categories .categories__item .id {
+    text-align: center;
+    width: 50px;
+}
+
+.container .container__table .table__categories .categories__list .category {
+    text-align: center;
+    width: 100px;
+}
+
+.container .container__table .table__categories .categories__item .category {
+    text-align: center;
+    width: 100px;
+}
+
+.container .container__table .table__categories .categories__list .thumbnail {
+    text-align: center;
+    width: 150px;
+}
+
+.container .container__table .table__categories .categories__item .thumbnail {
+    text-align: center;
+    width: 150px;
+}
+
+.container .container__table .table__categories .categories__list .title {
+    text-align: center;
+    width: 150px;
+}
+
+.container .container__table .table__categories .categories__item .title {
+    text-align: center;
+    width: 150px;
+}
+
+.container .container__table .table__categories .categories__list .code {
+    text-align: center;
+    width: 100px;
+}
+
+.container .container__table .table__categories .categories__item .code {
+    text-align: center;
+    width: 100px;
+}
+
+.container .container__table .table__categories .categories__list .price {
+    text-align: center;
+    width: 100px;
+}
+
+.container .container__table .table__categories .categories__item .price {
+    text-align: center;
+    width: 100px;
+}
+
+.container .container__table .table__categories .categories__list .stock {
+    text-align: center;
+    width: 75px;
+}
+
+.container .container__table .table__categories .categories__item .stock {
+    text-align: center;
+    width: 75px;
+}
+
+.container .container__table .table__categories .categories__list .available {
+    text-align: center;
+    width: 100px;
+}
+
+.container .container__table .table__categories .categories__item .available {
+    text-align: center;
+    width: 100px;
 }
