--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -33,8 +33,15 @@ body .ingresoProductos {
     margin-top: 30px;
 }
 
-body .ingresoProductos .foto {
+body .ingresoProductos .container__foto {
     margin-bottom: 15px;
+    width: 50%;
+}
+
+body .ingresoProductos .container__foto .foto {
+    width: 100%;
+    height: 30px;
+    border-radius: 10px;
 }
 
 body .ingresoProductos .ingresoProductos__container {
@@ -71,13 +78,6 @@ body .ingresoProductos .button {
     height: 30px;
     border-radius: 10px;
     margin-top: 15px;
-}
-
-body .ingresoProductos div textarea {
-    width: 100%;
-    border-radius: 10px;
-    padding: 0 10px;
-    padding-top: 5px;
 }
 
 section {
@@ -176,6 +176,8 @@ section a button {
 .container .container__table .table__categories .categories__item .thumbnail {
     text-align: center;
     width: 150px;
+    overflow: hidden;
+    height: 20px;
 }
 
 .container .container__table .table__categories .categories__list .title {
