--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -13,15 +13,14 @@ body {
     align-items: center;
     flex-flow: column wrap;
     height: 100vh;
-    margin-top: 30px;
 }
 
 body h1 {
     text-decoration: underline;
 }
 
-body h2 {
-    margin-top: 15px;
+body .ingresoProductos h2 {
+    margin-bottom: 15px;
 }
 
 /* Formulario */
@@ -30,7 +29,29 @@ body .ingresoProductos {
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
-    margin-top: 30px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+#delete-form {
+    flex-flow: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+#delete-form #delete {
+    width: 90px;
+    height: 30px;
+    border-radius: 10px;
+}
+
+body .ingresoProductos .id {
+    width: 100%;
+    height: 30px;
+    border-radius: 10px;
+    padding: 0 10px;
 }
 
 body .ingresoProductos .container__foto {
@@ -87,7 +108,6 @@ section {
     align-items: center;
     width: 100vw;
     gap: 10px;
-    margin-bottom: 30px;
 }
 
 section a button {
@@ -108,7 +128,6 @@ section a button {
 
 .container .container__table {
     width: 100%;
-    margin-top: 30px;
     padding: 0px 30px 30px 30px;
     display: flex;
     justify-content: center;
