agregando boton available

--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -11,10 +11,10 @@
         <input type="number" name="stock" id="stock" step="1" placeholder="Stock" required />
         <input type="text" name="description" id="description" placeholder="Description" required />
       </div>
-      <section>
+      <div>
         <input type="reset" value="Limpiar" class="button" />
         <input type="submit" value="Guardar" class="button" />
-      </section>
+      </div>
     </form>
     <h1>Real Time Products</h1>
   <table class="container__table">
