cambiando botones por iconos

--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,8 +1,7 @@
-<div class="container">
-  <h1>Panel de Administracion</h1>
+<div class="contenedor">
+  <h1 class="titulo titulo-principal">Panel de Administración</h1>
     <form action="/realtimeproducts" method="POST" enctype="multipart/form-data" class="ingresoProductos" id="form">
-    <h2>Ingresar Producto:</h2>
-      <div class="ingresoProductos__container">
+      <div class="ingresoProductos__contenedor">
         <input type="text" name="code" id="code" placeholder="Code" required />
         <input type="text" name="category" id="category" placeholder="Category" required />
         <input type="text" name="title" id="title" placeholder="Title" required />
@@ -12,12 +11,11 @@
         <input type="text" name="description" id="description" placeholder="Description" required />
       </div>
       <div>
-        <input type="reset" value="Limpiar" class="button" />
-        <input type="submit" value="Guardar" class="button" />
+        <input type="reset" value="Limpiar" class="button limpiar" />
+        <input type="submit" value="Guardar" class="button guardar" />
       </div>
     </form>
-    <h1>Real Time Products</h1>
-  <table class="container__table">
+  <table class="contenedor__table">
     <thead class="table__categories">
       <tr class="categories__list">
         <th class="id">Id:</th>
@@ -28,6 +26,7 @@
         <th class="price">Price:</th>
         <th class="stock">Stock:</th>
         <th class="available">Available:</th>
+         <th class="edit" id="edit">Edit:</th>
         <th class="delete" id="delete">Delete:</th>
       </tr>
     </thead>
@@ -37,6 +36,5 @@
   </table>
 </div> 
 
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script src="index.js"></script>
