--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -5,13 +5,12 @@
         <input type="text" name="code" id="code" placeholder="Code" required />
         <input type="text" name="category" id="category" placeholder="Category" required />
         <input type="text" name="title" id="title" placeholder="Title" required />
-        <input type="text" name="file" id="file" class="file" accept="image/*" placeholder="Image" required/>
+        <input type="text" name="file" id="file" class="file" accept="image/*" placeholder="Image" required />
         <input type="number" name="price" id="price" step="10" placeholder="Price" required />
         <input type="number" name="stock" id="stock" step="1" placeholder="Stock" required />
         <input type="text" name="description" id="description" placeholder="Description" required />
       </div>
-      
-      <div>
+      <div class="contenedor__button">
         <input type="reset" value="Limpiar" class="button limpiar" />
         <input type="submit" value="Guardar" class="button guardar" />
       </div>
