--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -33,8 +33,22 @@ body {
 .contenedor .ingresoProductos .ingresoProductos__contenedor {
     width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     gap: 20px;
+}
+.contenedor .ingresoProductos .ingresoProductos__contenedor .contenedor__texto {
+    width: 100%;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+}
+.contenedor .ingresoProductos .ingresoProductos__contenedor .contenedor__file {
+    width: 30%;
+    min-width: 300px;
 }
 .contenedor .ingresoProductos .ingresoProductos__contenedor input {
     width: 100%;
@@ -92,54 +106,64 @@ body {
     padding: 0px 30px 0px 30px;
 }
 .contenedor .contenedor__table .id {
-    width: 50px;
+    width: 40px;
     text-align: center;
     overflow: hidden;
+    height: 20px;
 }
 .contenedor .contenedor__table .code {
     width: 100px;
     text-align: center;
     overflow: hidden;
+    height: 20px;
 }
 .contenedor .contenedor__table .category {
-    width: 100px;
-    text-align: center;
-    overflow: hidden;
-}
-.contenedor .contenedor__table .title {
-    width: 100px;
-    text-align: center;
-    overflow: hidden;
-}
-.contenedor .contenedor__table .thumbnail {
     width: 125px;
     text-align: center;
     overflow: hidden;
+    height: 20px;
+}
+.contenedor .contenedor__table .title {
+    width: 125px;
+    text-align: center;
+    overflow: hidden;
+    height: 20px;
+}
+.contenedor .contenedor__table .thumbnail {
+    width: 150px;
+    text-align: center;
+    overflow: hidden;
+    height: 20px;
 }
 .contenedor .contenedor__table .price {
-    width: 100px;
+    width: 75px;
     text-align: center;
     overflow: hidden;
+    height: 20px;
 }
 .contenedor .contenedor__table .stock {
-    width: 75px;
+    width: 50px;
     text-align: center;
     overflow: hidden;
+    height: 20px;
 }
 .contenedor .contenedor__table .available {
-    width: 100px;
-    text-align: center;
-    overflow: hidden;
-}
-.contenedor .contenedor__table .edit {
     width: 75px;
     text-align: center;
     overflow: hidden;
+    height: 20px;
+}
+.contenedor .contenedor__table .edit {
+    width: 50px;
+    text-align: center;
+    overflow: hidden;
+    height: 20px;
 }
 .contenedor .contenedor__table .delete {
     width: 75px;
     text-align: center;
     overflow: hidden;
+    height: 20px;
 }
 
 /* Products */
@@ -164,14 +188,21 @@ body .products__table .table__categories .categories__item {
     border: 2px solid black;
     border-radius: 10px;
     width: 300px;
-    aspect-ratio: 1/1.70;
+    aspect-ratio: 1/1.7;
     overflow: hidden;
     margin: 0px 15px 30px 15px;
+    background-color: black;
+    color: white;
+    box-shadow: 2px 2px 2px black;
 }
 body .products__table .table__categories .categories__item .item__foto {
     width: 100%;
     aspect-ratio: 1/1;
     background-color: white;
+}
+body .products__table .table__categories .categories__item .item__foto .thumbnail {
+    width: 100%;
+    aspect-ratio: 1/1;
 }
 body .products__table .table__categories .categories__item .item__texto {
     padding: 10px;
