--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -2,13 +2,17 @@
   <h1 class="titulo titulo-principal">Panel de Administración</h1>
     <form action="/realtimeproducts" method="POST" enctype="multipart/form-data" class="ingresoProductos" id="form">
       <div class="ingresoProductos__contenedor">
-        <input type="text" name="code" id="code" placeholder="Code" required />
-        <input type="text" name="category" id="category" placeholder="Category" required />
-        <input type="text" name="title" id="title" placeholder="Title" required />
-        <input type="text" name="file" id="file" class="file" accept="image/*" placeholder="Image" required />
-        <input type="number" name="price" id="price" step="10" placeholder="Price" required />
-        <input type="number" name="stock" id="stock" step="1" placeholder="Stock" required />
-        <input type="text" name="description" id="description" placeholder="Description" required />
+        <div class="contenedor__file">
+          <input type="text" name="file" id="file" class="file" accept="image/*" placeholder="Image" required />
+        </div>
+        <div class="contenedor__texto">
+          <input type="text" name="code" id="code" placeholder="Code" required />
+          <input type="text" name="category" id="category" placeholder="Category" required />
+          <input type="text" name="title" id="title" placeholder="Title" required />
+          <input type="number" name="price" id="price" step="10" placeholder="Price" required />
+          <input type="number" name="stock" id="stock" step="1" placeholder="Stock" required />
+          <input type="text" name="description" id="description" placeholder="Description" required />
+        </div>
       </div>
       <div class="contenedor__button">
         <input type="reset" value="Limpiar" class="button limpiar" />
