--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -3,7 +3,7 @@
     <form action="/realtimeproducts" method="POST" enctype="multipart/form-data" class="ingresoProductos" id="form">
       <div class="ingresoProductos__contenedor">
         <div class="contenedor__file">
-          <input type="text" name="file" id="file" class="file" accept="image/*" placeholder="Image" required />
+          <input type="text" name="file" id="file" class="file" placeholder="Image" required />
         </div>
         <div class="contenedor__texto">
           <input type="text" name="code" id="code" placeholder="Code" required />
