--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -2,10 +2,11 @@
   <h1 class="titulo titulo-principal">Panel de Administración</h1>
     <form action="/realtimeproducts" method="POST" enctype="multipart/form-data" class="ingresoProductos" id="form">
       <div class="ingresoProductos__contenedor">
-        <div class="contenedor__file">
-          <input type="text" name="file" id="file" class="file" placeholder="Image" required />
-        </div>
+        {{!-- <div class="contenedor__file">
+         
+        </div> --}}
         <div class="contenedor__texto">
+          <input type="text" name="file" id="file" class="file" placeholder="Image" required />
           <input type="text" name="code" id="code" placeholder="Code" required />
           <input type="text" name="category" id="category" placeholder="Category" required />
           <input type="text" name="title" id="title" placeholder="Title" required />
@@ -38,7 +39,7 @@
       {{!-- Aqui van todos los productos --}}
     </tbody>
   </table>
-</div> 
+</div>
 
 <script src="/socket.io/socket.io.js"></script>
 <script src="index.js"></script>
