actualizando el carrito

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -8,7 +8,7 @@
           <div><a href={{this.thumbnail.[0]}} target="_blank"><img class="thumbnail" src={{this.thumbnail.[0]}} alt={{this.thumbnail.[0]}}></a></div>
         </div>
         <div class="item__texto">
-          <div class="id">Id: {{this.id}}</div>
+          <div class="id">Id: {{this._id}}</div>
           <div class="code">Code: {{this.code}}</div>
           <div class="category">Category: {{this.category}}</div>
           <div class="title">Title: {{this.title}}</div>
