agregando vista al carrito

--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -14,8 +14,9 @@
           <div class="title">Title: {{this.title}}</div>
           <div class="price">Price: {{this.price}}</div>
           <div class="stock">Stock: {{this.stock}}</div>
-          {{!-- <div class="available">Available: {{this.available}}</div> --}}
-          <div class="description">Description: {{this.description}}</div>
+          <div>
+            <button id={{this.id}}>Agregar</button>
+          </div>
         </div>
       </article>
       {{/if}}
