--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -210,3 +210,56 @@ body .products__table .table__categories .categories__item .item__foto .thumbnai
 body .products__table .table__categories .categories__item .item__texto {
     padding: 10px;
 }
+
+/* Home */
+.home__categories {
+    width: 100%;
+}
+
+.home__categories a {
+    width: 100%;
+    margin: 2px;
+}
+
+.home__categories a button {
+    width: 90px;
+    height: 40px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 2px black;
+}
+
+/* Carts
+
+.titulo {
+    text-align: center;
+}
+
+.carts__item {
+    width: 100vw;
+    padding-left: 30px;
+    padding-right: 30px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.carts__item .item__texto {
+    width: 400px;
+    border: 2px solid black;
+    height: auto;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border-radius: 10px;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 30px;
+    padding-left: 30px;
+}
+
+.carts__item .item__texto .products {
+    width: 100%;
+} */
+
