--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,6 +1,6 @@
 <section class="products__table">
   <h1 class="titulo">Home</h1>
-  <div class="table__categories">
+  <div class="home__categories">
     <a href="http://localhost:8080/realtimeproducts/" target="_blank"><button>RTP</button></a>
     <a href="http://localhost:8080/products/" target="_blank"><button>Products</button></a>
     <a href="http://localhost:8080/carts/" target="_blank"><button>Carts</button></a>
